# protobuf-serialization

./: .gitignore  App.config  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ProtobufSchemas.csproj  README.md  biome.json  eslint.config.mjs  knip.json  last.md  modernize.md  package-lock.json  package.json  packages.config  pom.xml  tsconfig.json  vitest.config.js  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mvn-publish.yml
proto/waves/: amount.proto  block.proto  invoke_script_result.proto  order.proto  recipient.proto  reward_share.proto  state_snapshot.proto  transaction.proto  transaction_state_snapshot.proto
proto/waves/events/: events.proto
proto/waves/events/grpc/: blockchain_updates.proto
proto/waves/lang/: dapp_meta.proto
proto/waves/node/grpc/: accounts_api.proto  assets_api.proto  blockchain_api.proto  blocks_api.proto  transactions_api.proto
test/: roundtrip.test.js
