[package]
name = "decentralchain-protobuf-schemas"
version = "1.5.2"
edition = "2021"

[dependencies]
tonic = "0.14"
# SECURITY: Do NOT re-enable "no-recursion-limit". It disables stack-overflow
# protection and allows a malicious deeply-nested message to crash the process.
prost = "0.13"

[build-dependencies]
tonic-build = "0.13"
